WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42352
Text layout is wrong with SVG Font that lacks <missing-glyph> element
https://bugs.webkit.org/show_bug.cgi?id=42352
Summary
Text layout is wrong with SVG Font that lacks <missing-glyph> element
Hajime Morrita
Reported
2010-07-15 02:55:44 PDT
Created
attachment 61629
[details]
a reproduction. Text layout goes wrong when: - There is a text styled with SVG Font - The text has a character whose glyph is NOT contained in the SVG font. - The SVG font does not have <missing-glypph> This problem is originally reported
http://code.google.com/p/chromium/issues/detail?id=48949
but not chromium specific.
Attachments
a reproduction.
(1.00 KB, application/xhtml+xml)
2010-07-15 02:55 PDT
,
Hajime Morrita
no flags
Details
patch v0
(29.09 KB, patch)
2010-07-15 03:44 PDT
,
Hajime Morrita
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-07-15 03:44:43 PDT
Created
attachment 61633
[details]
patch v0
Nikolas Zimmermann
Comment 2
2010-07-15 04:22:14 PDT
Comment on
attachment 61633
[details]
patch v0 Great patch! Please fix typo before landing. WebCore/ChangeLog:7 + sub-run, and a fallback to system font triggers such a comutation. Typo: computation.
Hajime Morrita
Comment 3
2010-07-15 05:00:52 PDT
Thank you for the lightning review! I'll land this after fix the typo.
Hajime Morrita
Comment 4
2010-07-15 05:54:58 PDT
Committed
r63422
: <
http://trac.webkit.org/changeset/63422
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug