2010-07-15  MORITA Hajime  <morrita@google.com>

Text layout is wrong with a SVG Font that lacks <missing-glyph> element
        https://bugs.webkit.org/show_bug.cgi?id=42352

        * platform/mac/svg/custom/svg-fonts-without-missing-glyph-expected.checksum: Added.
        * platform/mac/svg/custom/svg-fonts-without-missing-glyph-expected.png: Added.
        * platform/mac/svg/custom/svg-fonts-without-missing-glyph-expected.txt: Added.
        * svg/custom/svg-fonts-without-missing-glyph.xhtml: Added.
2010-07-15  MORITA Hajime  <morrita@google.com>

        Text layout is wrong with a SVG Font that lacks <missing-glyph> element
        https://bugs.webkit.org/show_bug.cgi?id=42352

        floatWidthOfSubStringUsingSVGFont() calculated a wrong value for a
        sub-run, and a fallback to system font triggers such a computation.
        This change made floatWidthOfSubStringUsingSVGFont() to deal with
        sub-runs.

        Test: svg/custom/svg-fonts-without-missing-glyph.xhtml

        * svg/SVGFont.cpp:
        (WebCore::floatWidthOfSubStringUsingSVGFont):

Canonical link: https://commits.webkit.org/54270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63422 268f45cc-cd09-0410-ab3c-d52691b4dbfc